deploy: 5e85644db93faea35068fe96cfec6cd4ef927766

--- a/copyxnat.xnat.copy_cache.html
+++ b/copyxnat.xnat.copy_cache.html
@@ -16,7 +16,7 @@
     
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="copyxnat.xnat.run_command module" href="copyxnat.xnat.run_command.html" />
+    <link rel="next" title="copyxnat.xnat.xml_cleaner module" href="copyxnat.xnat.xml_cleaner.html" />
     <link rel="prev" title="copyxnat.xnat.commands module" href="copyxnat.xnat.commands.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
@@ -29,7 +29,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat.run_command.html" title="copyxnat.xnat.run_command module"
+          <a href="copyxnat.xnat.xml_cleaner.html" title="copyxnat.xnat.xml_cleaner module"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="copyxnat.xnat.commands.html" title="copyxnat.xnat.commands module"
@@ -113,8 +113,8 @@
   <p class="topless"><a href="copyxnat.xnat.commands.html"
                         title="previous chapter">copyxnat.xnat.commands module</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="copyxnat.xnat.run_command.html"
-                        title="next chapter">copyxnat.xnat.run_command module</a></p>
+  <p class="topless"><a href="copyxnat.xnat.xml_cleaner.html"
+                        title="next chapter">copyxnat.xnat.xml_cleaner module</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -146,7 +146,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat.run_command.html" title="copyxnat.xnat.run_command module"
+          <a href="copyxnat.xnat.xml_cleaner.html" title="copyxnat.xnat.xml_cleaner module"
              >next</a> |</li>
         <li class="right" >
           <a href="copyxnat.xnat.commands.html" title="copyxnat.xnat.commands module"
