--- a/copyxnat.xnat.xml_cleaner.html
+++ b/copyxnat.xnat.xml_cleaner.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat.xnat.xnat_interface module" href="copyxnat.xnat.xnat_interface.html" />
-    <link rel="prev" title="copyxnat.xnat.run_command module" href="copyxnat.xnat.run_command.html" /> 
+    <link rel="prev" title="copyxnat.xnat.copy_cache module" href="copyxnat.xnat.copy_cache.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.xnat.xnat_interface.html" title="copyxnat.xnat.xnat_interface module"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat.run_command.html" title="copyxnat.xnat.run_command module"
+          <a href="copyxnat.xnat.copy_cache.html" title="copyxnat.xnat.copy_cache module"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
@@ -226,8 +226,8 @@ server at the correct locations
               <img class="logo" src="_static/project-icon.png" alt="Logo"/>
             </a></p>
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.xnat.run_command.html"
-                        title="previous chapter">copyxnat.xnat.run_command module</a></p>
+  <p class="topless"><a href="copyxnat.xnat.copy_cache.html"
+                        title="previous chapter">copyxnat.xnat.copy_cache module</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.xnat.xnat_interface.html"
                         title="next chapter">copyxnat.xnat.xnat_interface module</a></p>
@@ -265,7 +265,7 @@ server at the correct locations
           <a href="copyxnat.xnat.xnat_interface.html" title="copyxnat.xnat.xnat_interface module"
              >next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.xnat.run_command.html" title="copyxnat.xnat.run_command module"
+          <a href="copyxnat.xnat.copy_cache.html" title="copyxnat.xnat.copy_cache module"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
