--- a/genindex.html
+++ b/genindex.html
@@ -67,7 +67,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">add_tag_remaps() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.AppSettings">AppSettings (class in copyxnat.xnat.commands)</a>
+      <li><a href="copyxnat.xnat.app_settings.html#copyxnat.xnat.app_settings.AppSettings">AppSettings (class in copyxnat.xnat.app_settings)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.assessor">assessor (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
@@ -155,6 +155,20 @@
 </li>
       </ul></li>
       <li>
+    copyxnat.api
+
+      <ul>
+        <li><a href="copyxnat.api.html#module-copyxnat.api">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.api.run_command
+
+      <ul>
+        <li><a href="copyxnat.api.run_command.html#module-copyxnat.api.run_command">module</a>
+</li>
+      </ul></li>
+      <li>
     copyxnat.commands
 
       <ul>
@@ -224,6 +238,8 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -231,8 +247,6 @@
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui.copyxnat_command_line
 
@@ -269,6 +283,13 @@
 </li>
       </ul></li>
       <li>
+    copyxnat.xnat.app_settings
+
+      <ul>
+        <li><a href="copyxnat.xnat.app_settings.html#module-copyxnat.xnat.app_settings">module</a>
+</li>
+      </ul></li>
+      <li>
     copyxnat.xnat.commands
 
       <ul>
@@ -280,13 +301,6 @@
 
       <ul>
         <li><a href="copyxnat.xnat.copy_cache.html#module-copyxnat.xnat.copy_cache">module</a>
-</li>
-      </ul></li>
-      <li>
-    copyxnat.xnat.run_command
-
-      <ul>
-        <li><a href="copyxnat.xnat.run_command.html#module-copyxnat.xnat.run_command">module</a>
 </li>
       </ul></li>
       <li>
@@ -672,6 +686,10 @@
       <ul>
         <li><a href="copyxnat.html#module-copyxnat">copyxnat</a>
 </li>
+        <li><a href="copyxnat.api.html#module-copyxnat.api">copyxnat.api</a>
+</li>
+        <li><a href="copyxnat.api.run_command.html#module-copyxnat.api.run_command">copyxnat.api.run_command</a>
+</li>
         <li><a href="copyxnat.commands.html#module-copyxnat.commands">copyxnat.commands</a>
 </li>
         <li><a href="copyxnat.commands.check_datatypes_command.html#module-copyxnat.commands.check_datatypes_command">copyxnat.commands.check_datatypes_command</a>
@@ -704,11 +722,11 @@
 </li>
         <li><a href="copyxnat.xnat.html#module-copyxnat.xnat">copyxnat.xnat</a>
 </li>
+        <li><a href="copyxnat.xnat.app_settings.html#module-copyxnat.xnat.app_settings">copyxnat.xnat.app_settings</a>
+</li>
         <li><a href="copyxnat.xnat.commands.html#module-copyxnat.xnat.commands">copyxnat.xnat.commands</a>
 </li>
         <li><a href="copyxnat.xnat.copy_cache.html#module-copyxnat.xnat.copy_cache">copyxnat.xnat.copy_cache</a>
-</li>
-        <li><a href="copyxnat.xnat.run_command.html#module-copyxnat.xnat.run_command">copyxnat.xnat.run_command</a>
 </li>
         <li><a href="copyxnat.xnat.xml_cleaner.html#module-copyxnat.xnat.xml_cleaner">copyxnat.xnat.xml_cleaner</a>
 </li>
@@ -971,7 +989,7 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.request">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.run_command.html#copyxnat.xnat.run_command.resolve_projects">resolve_projects() (in module copyxnat.xnat.run_command)</a>
+      <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.resolve_projects">resolve_projects() (in module copyxnat.api.run_command)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.resource">resource (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
@@ -979,15 +997,15 @@
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run">run() (copyxnat.xnat.commands.Command method)</a>
 </li>
-      <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.run_command">run_command() (in module copyxnat.utils.versioneer_version)</a>
+      <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.run_command">run_command() (in module copyxnat.api.run_command)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat.run_command.html#copyxnat.xnat.run_command.run_command">(in module copyxnat.xnat.run_command)</a>
+        <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.run_command">(in module copyxnat.utils.versioneer_version)</a>
 </li>
         <li><a href="versioneer.html#versioneer.run_command">(in module versioneer)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.run_command.html#copyxnat.xnat.run_command.run_command_on_servers">run_command_on_servers() (in module copyxnat.xnat.run_command)</a>
+      <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.run_command_on_servers">run_command_on_servers() (in module copyxnat.api.run_command)</a>
 </li>
   </ul></td>
 </tr></table>
