--- a/_modules/copyxnat/ui/copyxnat_command_line.html
+++ b/_modules/copyxnat/ui/copyxnat_command_line.html
@@ -47,10 +47,10 @@
 
 <span class="kn">from</span> <span class="nn">copyxnat.commands.find_commands</span> <span class="kn">import</span> <span class="n">find_command</span>
 <span class="kn">from</span> <span class="nn">copyxnat.commands</span> <span class="kn">import</span> <span class="n">find_commands</span>
-<span class="kn">from</span> <span class="nn">copyxnat.xnat.run_command</span> <span class="kn">import</span> <span class="n">run_command</span>
+<span class="kn">from</span> <span class="nn">copyxnat.api.run_command</span> <span class="kn">import</span> <span class="n">run_command</span>
 <span class="kn">from</span> <span class="nn">copyxnat.utils.versioning</span> <span class="kn">import</span> <span class="n">get_version_string</span>
 <span class="kn">from</span> <span class="nn">copyxnat.xnat.xnat_interface</span> <span class="kn">import</span> <span class="n">XnatServerParams</span>
-<span class="kn">from</span> <span class="nn">copyxnat.xnat.commands</span> <span class="kn">import</span> <span class="n">AppSettings</span>
+<span class="kn">from</span> <span class="nn">copyxnat.xnat.app_settings</span> <span class="kn">import</span> <span class="n">AppSettings</span>
 
 
 <div class="viewcode-block" id="main"><a class="viewcode-back" href="../../../copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">(</span><span class="n">args</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
