--- a/_modules/index.html
+++ b/_modules/index.html
@@ -37,7 +37,8 @@
           <div class="body" role="main">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="copyxnat/commands/check_datatypes_command.html">copyxnat.commands.check_datatypes_command</a></li>
+<ul><li><a href="copyxnat/api/run_command.html">copyxnat.api.run_command</a></li>
+<li><a href="copyxnat/commands/check_datatypes_command.html">copyxnat.commands.check_datatypes_command</a></li>
 <li><a href="copyxnat/commands/copy_command.html">copyxnat.commands.copy_command</a></li>
 <li><a href="copyxnat/commands/export_command.html">copyxnat.commands.export_command</a></li>
 <li><a href="copyxnat/commands/find_commands.html">copyxnat.commands.find_commands</a></li>
@@ -48,9 +49,9 @@
 <li><a href="copyxnat/ui/copyxnat_command_line.html">copyxnat.ui.copyxnat_command_line</a></li>
 <li><a href="copyxnat/utils/versioneer_version.html">copyxnat.utils.versioneer_version</a></li>
 <li><a href="copyxnat/utils/versioning.html">copyxnat.utils.versioning</a></li>
+<li><a href="copyxnat/xnat/app_settings.html">copyxnat.xnat.app_settings</a></li>
 <li><a href="copyxnat/xnat/commands.html">copyxnat.xnat.commands</a></li>
 <li><a href="copyxnat/xnat/copy_cache.html">copyxnat.xnat.copy_cache</a></li>
-<li><a href="copyxnat/xnat/run_command.html">copyxnat.xnat.run_command</a></li>
 <li><a href="copyxnat/xnat/xml_cleaner.html">copyxnat.xnat.xml_cleaner</a></li>
 <li><a href="copyxnat/xnat/xnat_interface.html">copyxnat.xnat.xnat_interface</a></li>
 <li><a href="copyxnat/xnat_backend/pyxnat_server.html">copyxnat.xnat_backend.pyxnat_server</a></li>
