--- a/copyxnat.commands.html
+++ b/copyxnat.commands.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat.commands.check_datatypes_command module" href="copyxnat.commands.check_datatypes_command.html" />
-    <link rel="prev" title="copyxnat package" href="copyxnat.html" /> 
+    <link rel="prev" title="copyxnat.api.run_command module" href="copyxnat.api.run_command.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.commands.check_datatypes_command.html" title="copyxnat.commands.check_datatypes_command module"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.html" title="copyxnat package"
+          <a href="copyxnat.api.run_command.html" title="copyxnat.api.run_command module"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
@@ -88,8 +88,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.html"
-                        title="previous chapter">copyxnat package</a></p>
+  <p class="topless"><a href="copyxnat.api.run_command.html"
+                        title="previous chapter">copyxnat.api.run_command module</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.commands.check_datatypes_command.html"
                         title="next chapter">copyxnat.commands.check_datatypes_command module</a></p>
@@ -127,7 +127,7 @@
           <a href="copyxnat.commands.check_datatypes_command.html" title="copyxnat.commands.check_datatypes_command module"
              >next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.html" title="copyxnat package"
+          <a href="copyxnat.api.run_command.html" title="copyxnat.api.run_command module"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
