--- a/_modules/index.html
+++ b/_modules/index.html
@@ -47,6 +47,8 @@
 <li><a href="copyxnat/commands/show_command.html">copyxnat.commands.show_command</a></li>
 <li><a href="copyxnat/pyreporter/pyreporter.html">copyxnat.pyreporter.pyreporter</a></li>
 <li><a href="copyxnat/ui/copyxnat_command_line.html">copyxnat.ui.copyxnat_command_line</a></li>
+<li><a href="copyxnat/utils/network_utils.html">copyxnat.utils.network_utils</a></li>
+<li><a href="copyxnat/utils/rsync.html">copyxnat.utils.rsync</a></li>
 <li><a href="copyxnat/utils/versioneer_version.html">copyxnat.utils.versioneer_version</a></li>
 <li><a href="copyxnat/utils/versioning.html">copyxnat.utils.versioning</a></li>
 <li><a href="copyxnat/xnat/app_settings.html">copyxnat.xnat.app_settings</a></li>
