--- a/copyxnat.utils.versioneer_version.html
+++ b/copyxnat.utils.versioneer_version.html
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="copyxnat.utils.versioning module" href="copyxnat.utils.versioning.html" />
-    <link rel="prev" title="copyxnat.utils package" href="copyxnat.utils.html" /> 
+    <link rel="prev" title="copyxnat.utils.rsync module" href="copyxnat.utils.rsync.html" /> 
   </head><body>
     <div class="related" role="navigation" aria-label="related navigation">
       <h3>Navigation</h3>
@@ -32,7 +32,7 @@
           <a href="copyxnat.utils.versioning.html" title="copyxnat.utils.versioning module"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.utils.html" title="copyxnat.utils package"
+          <a href="copyxnat.utils.rsync.html" title="copyxnat.utils.rsync module"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
@@ -206,8 +206,8 @@ two directory levels for an appropriately named parent directory</p>
               <img class="logo" src="_static/project-icon.png" alt="Logo"/>
             </a></p>
   <h4>Previous topic</h4>
-  <p class="topless"><a href="copyxnat.utils.html"
-                        title="previous chapter">copyxnat.utils package</a></p>
+  <p class="topless"><a href="copyxnat.utils.rsync.html"
+                        title="previous chapter">copyxnat.utils.rsync module</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="copyxnat.utils.versioning.html"
                         title="next chapter">copyxnat.utils.versioning module</a></p>
@@ -245,7 +245,7 @@ two directory levels for an appropriately named parent directory</p>
           <a href="copyxnat.utils.versioning.html" title="copyxnat.utils.versioning module"
              >next</a> |</li>
         <li class="right" >
-          <a href="copyxnat.utils.html" title="copyxnat.utils package"
+          <a href="copyxnat.utils.rsync.html" title="copyxnat.utils.rsync module"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">CopyXnat  documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >copyxnat</a> &#187;</li>
