--- a/genindex.html
+++ b/genindex.html
@@ -113,6 +113,8 @@
       </ul></li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes.CLEAR">CLEAR (copyxnat.pyreporter.pyreporter.PyReporterCodes attribute)</a>
 </li>
+      <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.clear">clear() (copyxnat.xnat.copy_cache.CopyCache method)</a>
+</li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">Command (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.COMMAND_LINE">COMMAND_LINE (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
@@ -238,8 +240,6 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -247,6 +247,8 @@
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui.copyxnat_command_line
 
@@ -259,6 +261,20 @@
 
       <ul>
         <li><a href="copyxnat.utils.html#module-copyxnat.utils">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.utils.network_utils
+
+      <ul>
+        <li><a href="copyxnat.utils.network_utils.html#module-copyxnat.utils.network_utils">module</a>
+</li>
+      </ul></li>
+      <li>
+    copyxnat.utils.rsync
+
+      <ul>
+        <li><a href="copyxnat.utils.rsync.html#module-copyxnat.utils.rsync">module</a>
 </li>
       </ul></li>
       <li>
@@ -430,16 +446,20 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes.END">END (copyxnat.pyreporter.pyreporter.PyReporterCodes attribute)</a>
 </li>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes.ERROR">ERROR (copyxnat.pyreporter.pyreporter.PyReporterCodes attribute)</a>
+</li>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.error">error() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.exists">exists() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.exists_on_server">exists_on_server() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.experiment">experiment (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.experiments">experiments() (copyxnat.xnat_backend.pyxnat_server.PyXnatSubject method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.experiments">experiments() (copyxnat.xnat_backend.pyxnat_server.PyXnatSubject method)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.export">export() (copyxnat.xnat.xnat_interface.XnatFile method)</a>
 
       <ul>
@@ -501,6 +521,8 @@
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.get_disallowed_project_ids">get_disallowed_project_ids() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_existing">get_existing() (copyxnat.xnat.xnat_interface.XnatItem class method)</a>
+</li>
+      <li><a href="copyxnat.utils.network_utils.html#copyxnat.utils.network_utils.get_host">get_host() (in module copyxnat.utils.network_utils)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_id">get_id() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 
@@ -716,6 +738,10 @@
 </li>
         <li><a href="copyxnat.utils.html#module-copyxnat.utils">copyxnat.utils</a>
 </li>
+        <li><a href="copyxnat.utils.network_utils.html#module-copyxnat.utils.network_utils">copyxnat.utils.network_utils</a>
+</li>
+        <li><a href="copyxnat.utils.rsync.html#module-copyxnat.utils.rsync">copyxnat.utils.rsync</a>
+</li>
         <li><a href="copyxnat.utils.versioneer_version.html#module-copyxnat.utils.versioneer_version">copyxnat.utils.versioneer_version</a>
 </li>
         <li><a href="copyxnat.utils.versioning.html#module-copyxnat.utils.versioning">copyxnat.utils.versioning</a>
@@ -865,6 +891,8 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.project_server_path">(copyxnat.xnat.xnat_interface.XnatProject method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.utils.rsync.html#copyxnat.utils.rsync.ProjectRsync">ProjectRsync (class in copyxnat.utils.rsync)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
   </ul></td>
@@ -880,6 +908,8 @@
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes">PyReporterCodes (class in copyxnat.pyreporter.pyreporter)</a>
+</li>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterError">PyReporterError</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
@@ -961,14 +991,14 @@
         <li><a href="versioneer.html#versioneer.render_pep440">(in module versioneer)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.render_pep440_old">render_pep440_old() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
         <li><a href="versioneer.html#versioneer.render_pep440_old">(in module versioneer)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.render_pep440_post">render_pep440_post() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
@@ -994,6 +1024,8 @@
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.resource">resource (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
+</li>
+      <li><a href="copyxnat.utils.rsync.html#copyxnat.utils.rsync.ProjectRsync.rsync_project_data">rsync_project_data() (copyxnat.utils.rsync.ProjectRsync method)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run">run() (copyxnat.xnat.commands.Command method)</a>
 </li>
